1, Add validate_code check api.
